# rag

./: .gitignore  README.md  pyproject.toml
src/ai/rag/: evaluator.py  generator.py  ingestor.py  models.py  orchestrator.py  prompt_compiler.py  query_analyzer.py  retriever.py
src/ai/rag/utils/: debug_utils.py  retriever_utils.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  cors.py  logging.py
src/api/models/: __init__.py
src/api/routers/: __init__.py  chat.py  health.py  ingestions.py
src/api/utils/: confidence.py
src/db/: connection.py
src/utils/: __init__.py
src/utils/logger/: __init__.py  logger.py
